--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Complete Bootstrap 4 Website Layout</title>
+	<title>René Spijker</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -68,28 +68,74 @@
 
 <!--- Jumbotron -->
 <div class="container-fluid">
-<div class="row jumbotron">
-	<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-		<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-			Molestiae repudiandae autem tempore nam quo neque impedit, praesentium 
-			reiciendis nemo voluptatibus nisi quas, odit repellendus officiis cum 
-			reprehenderit dignissimos. Autem, ipsam.
-		</p>
+	<div class="row jumbotron">
+		<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+			<p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+				Molestiae repudiandae autem tempore nam quo neque impedit, praesentium 
+				reiciendis nemo voluptatibus nisi quas, odit repellendus officiis cum 
+				reprehenderit dignissimos. Autem, ipsam.
+			</p>
+		</div>
 	</div>
-</div>
 </div>
 
 <!--- Welcome Section -->
 
 
 <!--- Three Column Section -->
-
+<div class="container-fluid padding">
+	<div class="row text-center padding">
+		<div class="col-xs-12 col-sm-6 col-md-3">
+			<i class="fab fa-html5 fa-5x"></i>
+			<h4>HTML5</h4>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-3">
+				<i class="fab fa-css3 fa-5x"></i>
+				<h4>CSS3</h4>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-3">
+				<i class="fab fa-js fa-5x"></i>
+				<h4>JavaScript</h4>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-3">
+				<i class="fab fa-php fa-5x"></i>
+				<h4>PHP</h4>
+		</div>
+		<!-- <div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fab fa-laravel fa-5x"></i>
+				<h4>Laravel</h4>
+		</div>
+		<div class="col-xs-12 col-sm-6 col-md-4">
+				<i class="fab fa-github fa-5x"></i>
+				<h4>GitHub</h4>
+		</div>
+		 -->
+		<hr class="my-4">
+	</div>
+</div>
 
 <!--- Two Column Section -->
+<div class="container-fluid padding">
+	<div class="row padding">
+		<div class="col-lg-6">
+			<h2>Numquam tenetur!</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><br> 
+				Ratione quos voluptatibus iusto temporibus adipisci aliquam molestiae 
+				dolores assumenda quidem tempora illo. <br><br>Perferendis earum dignissimos neque,
+				dolor sit totam ipsum tenetur!</p>
+		</div>
+		<div class="col-lg-6">
+				<img src="img/desk.png" class="img-fluid">
+		</div>
+	</div>
+</div>
 
-
+<hr class="my-4">
 <!--- Fixed background -->
-
+<figure>
+	<div class="fixed-wrap">
+		<div id="fix">
+</figure>
 
 <!--- Emoji Section -->
 
